# GNU-Build-System

./: .gitignore  Makefile.am  README.md  configure.ac  foo_skipped_test.c  foo_test.c  foo_xfail_test.c  lib.c  lib.h  main.c
lib/: Makefile.am  hello.c  hello.h
src/: hello
